--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "altair>=5.5.0",
-    "ipython>=9.0.2",
-    "matplotlib>=3.10.1",
     "numpy>=2.2.4",
     "pandas>=2.2.3",
     "pygame>=2.6.1",
     "streamlit>=1.44.1",
+    "torch-directml>=0.2.5.dev240914",
 ]
